# accounts_workflow-

./: .gitignore  Cargo.toml  mongodb.env
src/: main.rs
src/database/: mongo.rs
src/queue/: publisher.rs
src/service/: account.rs
